Added .gitignore / pos_tagger

--- a/sentence_tokenizer.ipynb
+++ b/sentence_tokenizer.ipynb
@@ -28,10 +28,9 @@
    "source": [
     "### Spacy\n",
     "\n",
-    "#### Installation:\n",
+    "#### Installation (In command line):\n",
     "\n",
     "    pip install spacy\n",
-    "\n",
     "    python3 -m spacy download en_core_web_sm"
    ]
   },
@@ -55,10 +54,10 @@
    "source": [
     "### NLTK\n",
     "\n",
-    "#### Installation:\n",
+    "#### Installation (In command line):\n",
+    "\n",
     "    pip install nltk\n",
-    "    \n",
-    "    uncomment nltk.download('punkt')"
+    "    python -m nltk.downloader punkt"
    ]
   },
   {
