--- a/pos_tagger.ipynb
+++ b/pos_tagger.ipynb
@@ -76,24 +76,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NNP: noun, proper, singular\n",
-      "    Motown Venneboerger Czestochwa Ranzer Conchita Trumplane Christos\n",
-      "    Oceanside Escobar Kreisler Sawyer Cougar Yvette Ervin ODI Darryl CTCA\n",
-      "    Shannon A.K.C. Meltex Liverpool ...\n"
+      "JJ: adjective or numeral, ordinal\n",
+      "    third ill-mannered pre-war regrettable oiled calamitous first separable\n",
+      "    ectoplasmic battery-powered participatory fourth still-to-be-named\n",
+      "    multilingual multi-disciplinary ...\n"
      ]
     }
    ],
    "source": [
     "#Run this on a specific tag to get information about it\n",
-    "nltk.help.upenn_tagset(\"NNP\")"
+    "nltk.help.upenn_tagset(\"JJ\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
