--- a/fuzzy_wuzzy_test.ipynb
+++ b/fuzzy_wuzzy_test.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# FuzzyWuzzy Test\n",
     "\n",
-    "Testing the possibile method of evaluating sentences for answers using Python's FuzzyWuzzy library"
+    "Testing possible method of evaluating sentences for answers using Python's FuzzyWuzzy library"
    ]
   },
   {
@@ -76,6 +76,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Potential work with query reformulation\n",
+    "#See if this is more useful with that\n",
+    "query1 = \"What is Gyrados most similar in appearance to?\"\n",
+    "query2 = \"Where is Gyrados first seen?\" #This requires noting \"appeared\" and \"seen\" would be synonyms\n",
+    "query3 = \"Where is a red Gyarados found in Pokémon Gold?\"\n",
+    "query4 = \"What franchise is Gyarados in?\"\n",
+    "query5 = \"Who is Gyarados voiced by?\"\n",
+    "query6 = \"What is Gyarados known as?\"\n",
+    "query7 = \"How is the growth of Gyarados Pokémon Diamond and Pearl to Pokémon Black and White described by IGN?\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -87,8 +104,8 @@
    ],
    "source": [
     "query = \"Where did Gyarados first appear?\"\n",
-    "#print(sentences)\n",
     "result = process.extract(query, sentences)\n",
+    "#print(sentences)\n",
     "print(query)\n",
     "print(result)\n",
     "print(fuzz.partial_ratio(query, \"Gyarados\"))\n",
@@ -101,7 +118,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ]
 }
