Layout system for reformulation with parser

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -29,7 +29,10 @@
    "source": [
     "# Parser\n",
     "\n",
-    "Parse a sentence such that it can be reformulated as a base answer and used to query document"
+    "Parse a sentence such that it can be reformulated as a base answer and used to query document\n",
+    "\n",
+    "It should be noted I attempted following the instructions at the following site, but something might have been buggy with my requests library:\n",
+    "https://bbengfort.github.io/snippets/2018/06/22/corenlp-nltk-parses.html?fbclid=IwAR1d6Hu4L1UL9wzXOQC_fJJ4R58q-wmwZzbYfjhmhsd7psZx6DQTYnCvWvg"
    ]
   },
   {
@@ -56,7 +59,7 @@
     "-preload tokenize,ssplit,pos,lemma,ner,parse,depparse \\\n",
     "-status_port 9000 -port 9000 -timeout 15000 &\n",
     "\n",
-    "Remember to STOP the server when finished (can then kill job)"
+    "Remember to STOP the server when finished (then kill job)"
    ]
   },
   {
@@ -77,6 +80,15 @@
     "# Lexical Parser\n",
     "parser = CoreNLPParser(url='http://localhost:9000')\n",
     "list(parser.parse('What is the airspeed of an unladen swallow ?'.split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = \"Gyarados (ギャラドス, Gyaradosu,  or ) is a Pokémon species in Nintendo and Game Freak's Pokémon franchise. Created by Ken Sugimori, Gyarados first appeared in the video games Pokémon Red and Pokemon Green and subsequent sequels, later appearing in various merchandise, spinoff titles and animated and printed adaptations of the franchise.\""
    ]
   }
  ]
