Follow setup instructions

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# Parser\n",
     "\n",
-    "Parse a sentence such that it can be reformulated as a base answer and used to query document\n",
+    "Parse a sentence such that its syntax can be broken down\n",
     "\n",
     "It should be noted I attempted following the instructions at the following site, but something might have been buggy with my requests library:\n",
     "https://bbengfort.github.io/snippets/2018/06/22/corenlp-nltk-parses.html?fbclid=IwAR1d6Hu4L1UL9wzXOQC_fJJ4R58q-wmwZzbYfjhmhsd7psZx6DQTYnCvWvg"
@@ -42,7 +42,6 @@
    "outputs": [],
    "source": [
     "import nltk\n",
-    "import requests\n",
     "import os\n",
     "from nltk.parse import CoreNLPParser"
    ]
@@ -64,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "[Tree('ROOT', [Tree('SBARQ', [Tree('WHNP', [Tree('WP', ['What'])]), Tree('SQ', [Tree('VBZ', ['is']), Tree('NP', [Tree('NP', [Tree('DT', ['the']), Tree('NN', ['airspeed'])]), Tree('PP', [Tree('IN', ['of']), Tree('NP', [Tree('DT', ['an']), Tree('JJ', ['unladen'])])]), Tree('S', [Tree('VP', [Tree('VB', ['swallow'])])])])]), Tree('.', ['?'])])])]"
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
