--- a/parser_reformulation_test.ipynb
+++ b/parser_reformulation_test.ipynb
@@ -133,7 +133,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TODO: Use vectorize reformulated question (with and without function words removed as separate tests) and determine most likely sentence by taking cosine similarity with vectorized sentences"
+   ]
   }
  ]
 }
