Attempt to start up server within executable

--- a/cos_glove.ipynb
+++ b/cos_glove.ipynb
@@ -40,7 +40,9 @@
     "\n",
     "Learned about how to read the vectors from here:\n",
     "\n",
-    "https://medium.com/analytics-vidhya/basics-of-using-pre-trained-glove-vectors-in-python-d38905f356db\n"
+    "https://medium.com/analytics-vidhya/basics-of-using-pre-trained-glove-vectors-in-python-d38905f356db\n",
+    "\n",
+    "TODO: Look into tfidf as well - https://towardsdatascience.com/natural-language-processing-feature-engineering-using-tf-idf-e8b9d00e7e76\n"
    ]
   },
   {
