Clean and reorganize files

--- a/answer.ipynb
+++ b/answer.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +93,13 @@
     "            matches += v1[i] * v2[i] \n",
     "    cosine = matches / float((sum(v1)*sum(v2))**0.5) \n",
     "    #print(\"similarity: \", cosine) \n",
-    "    return cosine\n"
+    "    return cosine\n",
+    ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,8 @@
     "            if len(se) > 0: #Get rid of empty lines\n",
     "                sentences.append(se)\n",
     "                \n",
-    "#print(sentences)\n"
+    "#print(sentences)\n",
+    ""
    ]
   },
   {
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,8 +165,8 @@
     "\n",
     "    answer = results[keys[0]] + \".\"\n",
     "    print()\n",
-    "    print(q)\n",
-    "    print(answer)\n",
+    "    print(\"Question: \", q)\n",
+    "    print(\"Answer: \", answer)\n",
     "    print()\n",
     "\n",
     "    '''\n",
@@ -172,18 +174,19 @@
     "    for k in keys:\n",
     "        print(results[k])\n",
     "        print()\n",
-    "    '''\n"
+    "    '''\n",
+    ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": "\nWhat is Gyrados most similar in appearance to?\nGyarados is a large sea serpent Pokémon most similar in appearance to dragons seen in Chinese mythology.\n\n\nWhere is Gyrados first seen?\n It was then seen in Pokémon Shipwreck, where James kicked his Magikarp out of frustration, and it evolved into a Gyarados.\n\n\nWhere is a red Gyarados found in Pokémon Gold?\n In Pokémon Gold, Silver, and Crystal, and their remakes, a red Gyarados is found in the Lake of Rage.\n\n\nWhat franchise is Gyarados in?\nGyarados.\n\n\nWho is Gyarados voiced by?\nGyarados.\n\n\nWhat is Gyarados known as?\nGyarados.\n\n\nHow is the growth of Gyarados from Pokémon Diamond and Pearl to Pokémon Black and White described by IGN?\n IGN described the growth from Pokémon Diamond and Pearl to Pokémon Black and White'' as possibly being the \"series' biggest evolution since Magikarp morphed into Gyarados\".\n\n"
+     "name": "stdout",
+     "text": "\nQuestion:  What is Gyrados most similar in appearance to?\nAnswer:  Gyarados is a large sea serpent Pokémon most similar in appearance to dragons seen in Chinese mythology.\n\n\nQuestion:  Where is Gyrados first seen?\nAnswer:   It was then seen in Pokémon Shipwreck, where James kicked his Magikarp out of frustration, and it evolved into a Gyarados.\n\n\nQuestion:  Where is a red Gyarados found in Pokémon Gold?\nAnswer:   In Pokémon Gold, Silver, and Crystal, and their remakes, a red Gyarados is found in the Lake of Rage.\n\n\nQuestion:  What franchise is Gyarados in?\nAnswer:  Gyarados.\n\n\nQuestion:  Who is Gyarados voiced by?\nAnswer:  Gyarados.\n\n\nQuestion:  What is Gyarados known as?\nAnswer:  Gyarados.\n\n\nQuestion:  How is the growth of Gyarados from Pokémon Diamond and Pearl to Pokémon Black and White described by IGN?\nAnswer:   IGN described the growth from Pokémon Diamond and Pearl to Pokémon Black and White'' as possibly being the \"series' biggest evolution since Magikarp morphed into Gyarados\".\n\n"
     }
    ],
    "source": [
@@ -198,13 +201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": "Q4\n\nWhat franchise is Gyarados in?\nGyarados.\n\n"
+     "name": "stdout",
+     "text": "Q4\n\nQuestion:  What franchise is Gyarados in?\nAnswer:  Gyarados.\n\n"
     }
    ],
    "source": [
