--- a/old_jypter_tests/parser_reformulation_test.ipynb
+++ b/old_jypter_tests/parser_reformulation_test.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Attempt Using nltk.parse.stanford\n",
+    "# Can Ignore - Attempt Using nltk.parse.stanford \n",
     "\n",
     "Download stanford-parser-full-2018-10-17\n",
     "\n",
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Starting and stopping the CoreNLP process within python\n",
+    "# Can Ignore - Starting and stopping the CoreNLP process within python\n",
     "\n",
     "https://stackoverflow.com/questions/4789837/how-to-terminate-a-python-subprocess-launched-with-shell-true\n",
     "\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,13 +201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": "1\n[Tree('ROOT', [Tree('SBARQ', [Tree('WHNP', [Tree('WP', ['What'])]), Tree('SQ', [Tree('VBZ', ['is']), Tree('NP', [Tree('NNP', ['Gyrados'])]), Tree('ADJP', [Tree('RBS', ['most']), Tree('JJ', ['similar']), Tree('PP', [Tree('IN', ['in']), Tree('NP', [Tree('NN', ['appearance'])])]), Tree('TO', ['to'])])]), Tree('.', ['?'])])])]\n\n2\n[Tree('ROOT', [Tree('SBARQ', [Tree('WHADVP', [Tree('WRB', ['Where'])]), Tree('SQ', [Tree('VBZ', ['is']), Tree('NP', [Tree('NNP', ['Gyrados'])]), Tree('VP', [Tree('ADVP', [Tree('RB', ['first'])]), Tree('VBN', ['seen'])])]), Tree('.', ['?'])])])]\n\n3\n[Tree('ROOT', [Tree('SBARQ', [Tree('WHNP', [Tree('WP', ['Who'])]), Tree('SQ', [Tree('VBZ', ['is']), Tree('NP', [Tree('NNP', ['Gyarados'])]), Tree('VP', [Tree('VBN', ['voiced']), Tree('PP', [Tree('IN', ['by'])])])]), Tree('.', ['?'])])])]\n\n4\n[Tree('ROOT', [Tree('SBARQ', [Tree('WHADVP', [Tree('WRB', ['How'])]), Tree('SQ', [Tree('VBZ', ['is']), Tree('NP', [Tree('NP', [Tree('DT', ['the']), Tree('NN', ['growth'])]), Tree('PP', [Tree('IN', ['of']), Tree('NP', [Tree('NNP', ['Gyarados'])])])]), Tree('PP', [Tree('PP', [Tree('IN', ['from']), Tree('NP', [Tree('NP', [Tree('NNP', ['Pokémon']), Tree('NNP', ['Diamond'])]), Tree('CC', ['and']), Tree('NP', [Tree('NNP', ['Pearl'])])])]), Tree('PP', [Tree('TO', ['to']), Tree('NP', [Tree('NP', [Tree('NNP', ['Pokémon']), Tree('NNP', ['Black'])]), Tree('CC', ['and']), Tree('NP', [Tree('NP', [Tree('NNP', ['White'])]), Tree('VP', [Tree('VBN', ['described']), Tree('PP', [Tree('IN', ['by']), Tree('NP', [Tree('NNP', ['IGN'])])])])])])])])]), Tree('.', ['?'])])])]\n\n5\n[Tree('ROOT', [Tree('SQ', [Tree('VBZ', ['Is']), Tree('NP', [Tree('NNP', ['Gyarados'])]), Tree('VP', [Tree('VBN', ['voiced']), Tree('PP', [Tree('IN', ['by']), Tree('NP', [Tree('NNP', ['Unshō']), Tree('NNP', ['Ishizuka'])])])]), Tree('.', ['?'])])])]\n\n6\n[Tree('ROOT', [Tree('SBARQ', [Tree('SQ', [Tree('VBZ', ['does']), Tree('NP', [Tree('NNP', ['Gyarados'])]), Tree('VP', [Tree('VB', ['have']), Tree('NP', [Tree('CD', ['four']), Tree('JJ', ['white']), Tree('NNS', ['fins'])]), Tree('PP', [Tree('IN', ['down']), Tree('NP', [Tree('PRP$', ['its']), Tree('NN', ['back'])])])])]), Tree('.', ['?'])])])]\n\n7\n[Tree('ROOT', [Tree('SQ', [Tree('VBD', ['Was']), Tree('NP', [Tree('NNP', ['Gyarados'])]), Tree('VP', [Tree('VBN', ['seen']), Tree('PP', [Tree('IN', ['in']), Tree('NP', [Tree('NNP', ['Pokémon']), Tree('NNP', ['Shipwreck'])])])]), Tree('.', ['?'])])])]\n\n8\n[Tree('ROOT', [Tree('SQ', [Tree('VBZ', ['Has']), Tree('NP', [Tree('NNP', ['Gyarados'])]), Tree('VP', [Tree('VBN', ['been']), Tree('VP', [Tree('VBN', ['shown']), Tree('PP', [Tree('IN', ['in']), Tree('NP', [Tree('DT', ['the']), Tree('NNP', ['Magikarp']), Tree('NNP', ['Festival'])])])])])])])]\n\n"
+     "name": "stdout",
+     "text": "1\n[Tree('ROOT', [Tree('SBARQ', [Tree('WHNP', [Tree('WP', ['What'])]), Tree('SQ', [Tree('VBZ', ['is']), Tree('NP', [Tree('NNP', ['Gyrados'])]), Tree('ADJP', [Tree('RBS', ['most']), Tree('JJ', ['similar']), Tree('PP', [Tree('IN', ['in']), Tree('NP', [Tree('NN', ['appearance'])])]), Tree('TO', ['to'])])]), Tree('.', ['?'])])])]\n\n2\n[Tree('ROOT', [Tree('SBARQ', [Tree('WHADVP', [Tree('WRB', ['Where'])]), Tree('SQ', [Tree('VBZ', ['is']), Tree('NP', [Tree('NNP', ['Gyrados'])]), Tree('VP', [Tree('ADVP', [Tree('RB', ['first'])]), Tree('VBN', ['seen'])])]), Tree('.', ['?'])])])]\n\n3\n[Tree('ROOT', [Tree('SBARQ', [Tree('WHNP', [Tree('WP', ['Who'])]), Tree('SQ', [Tree('VBZ', ['is']), Tree('NP', [Tree('NNP', ['Gyarados'])]), Tree('VP', [Tree('VBN', ['voiced']), Tree('PP', [Tree('IN', ['by'])])])]), Tree('.', ['?'])])])]\n\n4\n[Tree('ROOT', [Tree('SBARQ', [Tree('WHADVP', [Tree('WRB', ['How'])]), Tree('SQ', [Tree('VBZ', ['is']), Tree('NP', [Tree('NP', [Tree('DT', ['the']), Tree('NN', ['growth'])]), Tree('PP', [Tree('IN', ['of']), Tree('NP', [Tree('NNP', ['Gyarados'])])])]), Tree('PP', [Tree('PP', [Tree('IN', ['from']), Tree('NP', [Tree('NP', [Tree('NNP', ['Pokémon']), Tree('NNP', ['Diamond'])]), Tree('CC', ['and']), Tree('NP', [Tree('NNP', ['Pearl'])])])]), Tree('PP', [Tree('TO', ['to']), Tree('NP', [Tree('NP', [Tree('NNP', ['Pokémon']), Tree('NNP', ['Black'])]), Tree('CC', ['and']), Tree('NP', [Tree('NP', [Tree('NNP', ['White'])]), Tree('VP', [Tree('VBN', ['described']), Tree('PP', [Tree('IN', ['by']), Tree('NP', [Tree('NNP', ['IGN'])])])])])])])])]), Tree('.', ['?'])])])]\n\n5\n[Tree('ROOT', [Tree('SQ', [Tree('VBZ', ['Is']), Tree('NP', [Tree('NNP', ['Gyarados'])]), Tree('VP', [Tree('VBN', ['voiced']), Tree('PP', [Tree('IN', ['by']), Tree('NP', [Tree('NNP', ['Unshō']), Tree('NNP', ['Ishizuka'])])])]), Tree('.', ['?'])])])]\n\n6\n[Tree('ROOT', [Tree('SBARQ', [Tree('SQ', [Tree('VBZ', ['does']), Tree('NP', [Tree('NNP', ['Gyarados'])]), Tree('VP', [Tree('VB', ['have']), Tree('NP', [Tree('CD', ['four']), Tree('JJ', ['white']), Tree('NNS', ['fins'])]), Tree('PP', [Tree('IN', ['down']), Tree('NP', [Tree('PRP$', ['its']), Tree('NN', ['back'])])])])]), Tree('.', ['?'])])])]\n\n7\n[Tree('ROOT', [Tree('SQ', [Tree('VBD', ['Was']), Tree('NP', [Tree('NNP', ['Gyarados'])]), Tree('VP', [Tree('VBN', ['seen']), Tree('PP', [Tree('IN', ['in']), Tree('NP', [Tree('NNP', ['Pokémon']), Tree('NNP', ['Shipwreck'])])])]), Tree('.', ['?'])])])]\n\n8\n[Tree('ROOT', [Tree('SQ', [Tree('VBZ', ['Has']), Tree('NP', [Tree('NNP', ['Gyarados'])]), Tree('VP', [Tree('VBN', ['been']), Tree('VP', [Tree('VBN', ['shown']), Tree('PP', [Tree('IN', ['in']), Tree('NP', [Tree('DT', ['the']), Tree('NNP', ['Magikarp']), Tree('NNP', ['Festival'])])])])])])])]\n\n9\n[Tree('ROOT', [Tree('SQ', [Tree('VBZ', ['Is']), Tree('NP', [Tree('NNP', ['Gyarados'])]), Tree('PP', [Tree('IN', ['in']), Tree('NP', [Tree('DT', ['a']), Tree('NN', ['franchise'])])]), Tree('.', ['?'])])])]\n\n"
     }
    ],
    "source": [
@@ -216,7 +216,7 @@
     "#https://gist.github.com/nlothian/9240750\n",
     "#Generally yes/no = SQ after Root and wh = SBARQ after Root, but there are some exceptions (eg. query6 being S)\n",
     "\n",
-    "queries = [query1, query2, query5, query7, query8, query9, query10, query11]\n",
+    "queries = [query1, query2, query5, query7, query8, query9, query10, query11, query12]\n",
     "count = 1\n",
     "result_tokenize = []\n",
     "for q in queries:\n",
@@ -305,6 +305,8 @@
     }
    ],
    "source": [
+    "#System call does not work\n",
+    "#Parser still works if it is instantiated through commandline before the parser object is created\n",
     "\n",
     "os.system(\"cd stanford-corenlp-full-2018-10-05; java -mx4g -cp '*' edu.stanford.nlp.pipeline.StanfordCoreNLPServer \\\n",
     "-preload tokenize,ssplit,pos,lemma,ner,parse,depparse \\\n",
